# qdrant-stand

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  ingest.py  pyproject.toml
.github/workflows/: deploy-image.yml  deploy-stand.yml
corpus/it_corpus/: git-basics.md  manifest.yml  pandas-intro.md  python-intro.md  shell-basics.md  sql-basics.md  testing-basics.md
corpus/ural_corpus/: berezin-ural-1910.txt  esbe-demidovy-semya.txt  mamin-priemish.txt  manifest.yml
stand/: config.py
stand/rag/: chunk.py  corpus.py  embedder.py  ingestion.py  text_splitter.py  vector_store.py
